fix: horizontal scroll on home page

--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,6 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  width: 100vw;
-  height: 100vh;
   font-family: Montserrat, Arial, Helvetica, sans-serif;
   margin: 0 auto;
   font-family: "Kode Mono", monospace;
