--- a/src/pages/Home/style.module.scss
+++ b/src/pages/Home/style.module.scss
@@ -1,6 +1,6 @@
 @use "../../styles/variables";
 
-.sections_container {
+main {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,7 +15,7 @@ section {
     max-width: 936px;
 }
 
-h3 {
+h2 {
     margin: 10px;
     font-weight: 400;
 }
@@ -29,10 +29,10 @@ h3 {
     align-items: center;
     margin-bottom: 50px;
     box-shadow: 0px 4px 13px rgb(0, 8, 255);
-    h2 {
+    &__title {
         font-size: 3em;
     }
-    p {
+    &__introduction {
         font-size: 1.4rem;
     }
 }
@@ -46,7 +46,7 @@ h3 {
 
 }
 
-.oc_text {
+.works_text {
     display: block;
     margin: 20px 0;
 }
